Manual Installation Guide Updates (#18)
Co-authored-by: Zain Ali <zain.ali@partner.samsung.com>